force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting para habilitar e desabilitar integrações</description>
    <label>Integração</label>
</CustomObject>