force-app/main/default/objects/Integration__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>