force-app/main/default/objects/Integration__c/fields/UrlToken__c.field-meta.xml
<CustomField>
    <fullName>UrlToken__c</fullName>
    <label>URL Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>